# Solar_Power

./: README.md  pyproject.toml
notebooks/: data_cleaning.ipynb  model_training.ipynb
webapp/: app.py
